outside link changes

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
             Select the topic that interests you the most:
         </h1>
         <div class="icon-container">
-            <a href="https://www.bratinstitute.com/allstar/">
+            <a href="https://www.prattbaseball.com/allstars/">
                 <img src="astrology.png" alt="Astrology" class="icon icon1">
                 <div class="caption">Astrology</div>
             </a>
-            <a href="https://www.bratinstitute.com/MLBTI/">
+            <a href="https://www.prattbaseball.com/mlbti/">
                 <img src="brain.png" alt="Personality Quizzes" class="icon icon2">
                 <div class="caption">Personality Quizzes</div>
             </a>
-            <a href="https://www.bratinstitute.com/SWIFTIES/">
+            <a href="https://www.prattbaseball.com/swifties/">
                 <img src="taylor.png" alt="Taylor Swift" class="icon icon3">
                 <div class="caption">Taylor Swift</div>
             </a>
